2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/alerts_status.php: change the user rights to validate
	alert, before it was "LW" and now it is "AW". This new user rights tell me
	Sancho.

2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* general/logon_ok.php: change the text to be a correct sentence.
	
	Fixex: #3394390

2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/help/en/help_action_threshold.php,
	include/help/es/help_action_threshold.php: added help for threshold from
	the wiki documentation.
	
	Fixes: #3371385

2011-09-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/setup.php: Added contextual help in this view.

2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/exportdata.php: fixed when havent any data in any
	group.
	
	Fixes: #3371412

2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/system_info.php: show the location of file.
	
	Fixes: #3384516

2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/agentes/planned_downtime.php: fixed to avoid create or update
	"Planned downtimes" with empty names or all white spaces or identical name
	to others. And disabled the button to add agent in the "Planned downtimes"
	when in the list of agents in group is none.
	
	Fixes: #3371256

2011-09-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* general/pandora_help.php: Fixed visualization error on this view.

2011-09-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/gis_step_2.php: Changed style in titles to match
	new style pattern.
	
2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/gis_maps/configure_gis_map.php: fixed the form to create or
	update gis connections.
	
	Fixes: #3403160

2011-09-03  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_delete_alerts.php,
	godmode/massive/massive_edit_modules.php,
	operation/agentes/ver_agente.php: Added group recursion	feature,