@@ -1,3 +1,7 @@
+2011-09-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* godmode/setup/setup.php: Avoiding wrong integria inventory object data.
+
 2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* operation/agentes/alerts_status.php: change the user rights to validate
